Return immutable sets and use existing annotation class.